--- a/HospitalManagmentSystem/HospitalManagmentSystem.csproj
+++ b/HospitalManagmentSystem/HospitalManagmentSystem.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<InternalsVisibleTo Include="HospitalManagmentSystem.Test" />
+	  <InternalsVisibleTo Include="HospitalManagmentSystem.Test" />
+	  <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
